[gd_scene load_steps=8 format=3 uid="uid://bkq4vwnkj1mfq"]

[ext_resource type="Script" path="res://game/scripts/player.gd" id="1_ex38h"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_h2uoq"]
[ext_resource type="PackedScene" uid="uid://ckr666vxdrqx2" path="res://game/gun.tscn" id="3_wy14h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_46hbr"]
radius = 34.0
height = 68.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x52ot"]
size = Vector2(60, 79)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwetp"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kstok"]
bg_color = Color(0.623529, 0.866667, 0.317647, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ex38h")

[node name="HappyBoo" parent="." instance=ExtResource("1_h2uoq")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -9)
shape = SubResource("CapsuleShape2D_46hbr")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_wy14h")]
position = Vector2(0, -44)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -26.5)
shape = SubResource("RectangleShape2D_x52ot")
debug_color = Color(0.866667, 0.286275, 0.537255, 0.419608)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -88.0
offset_top = -156.0
offset_right = 88.0
offset_bottom = -129.0
theme_override_styles/background = SubResource("StyleBoxFlat_iwetp")
theme_override_styles/fill = SubResource("StyleBoxFlat_kstok")
value = 100.0
show_percentage = false

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
